--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "vlc-gesture-control"
-version = "1.0"
+version = "1.0.0"
 description = "Control VLC media player using hand gestures detected through a webcam"
-description_content_type = "text/markdown"
 readme = "README.md"
 authors = [
     {name = "ITIKELA BHASKAR", email = "itikela.bhaskar@research.iiit.ac.in"}
 ]
-license = {text = "MIT"}
+license = "MIT"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: End Users/Desktop",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -85,4 +83,4 @@ testpaths = ["src/vlc_gesture_control/tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
-addopts = "--verbose --cov=vlc_gesture_control --cov-report=term-missing" 
+addopts = "--cov=src --cov-report=term --cov-report=xml" 
