--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ gpu = [
 ]
 dev = [
     "pytest>=7.0.0,<8.0.0",
-    "black>=23.0.0,<24.0.0",
+    "black==22.3.0",
     "isort>=5.12.0,<6.0.0",
     "flake8>=6.0.0,<7.0.0",
     "mypy>=1.0.0,<2.0.0",
@@ -64,7 +64,7 @@ where = ["src"]
 
 [tool.black]
 line-length = 88
-target-version = ["py39", "py310", "py311", "py312"]
+target-version = ["py39"]
 
 [tool.isort]
 profile = "black"
